<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Login">

    <ImageView
        android:layout_width="107dp"
        android:layout_height="53dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/download" />

    <EditText
        android:id="@+id/et_firstName"
        android:layout_width="200dp"
        android:hint="@string/first_name"
        android:layout_height="40dp" />
    <EditText
        android:id="@+id/et_lastName"
        android:layout_width="200dp"
        android:hint="@string/last_name"
        android:layout_height="40dp" />

    <!--to be converted to Spinner later-->
    <EditText
        android:id="@+id/reg_username"
        android:layout_width="200dp"
        android:hint="@string/username"
        android:layout_height="40dp" />
    <EditText
        android:id="@+id/et_batch"
        android:layout_width="200dp"
        android:hint="@string/batch"
        android:layout_height="40dp" />

    <EditText
        android:id="@+id/reg_password"
        android:layout_width="200dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_height="40dp" />
    <EditText
        android:id="@+id/et_passwordConfirm"
        android:layout_width="200dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:layout_height="40dp" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/register_btn"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regtext"
            android:textSize="17dp"/>

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_switch"
            android:textSize="17dp"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>


</LinearLayout>