<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Login">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="67dp"
        android:layout_marginTop="-100dp"
        android:layout_marginBottom="70dp"
        android:src="@drawable/download" />

    <EditText
        android:id="@+id/et_email_login"
        android:layout_width="200dp"
        android:hint="@string/email"
        android:layout_height="40dp" />

    <EditText
        android:id="@+id/et_password_login"
        android:layout_width="200dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_height="40dp" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/login"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:textSize="17dp"
            android:text="@string/logtext"/>

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/register_switch"
            android:textSize="17dp"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>


</LinearLayout>